# extract-repo-url

./: .appveyor.yml  .gitattributes  .travis.yml  Cargo.toml  README.md
.cargo-husky/hooks/: pre-push
ci/: before_deploy.ps1  before_deploy.sh
src/: error.rs  extract.rs  main.rs  open.rs
src/testdata/: top1000-repos.txt
